# VKEMS_Water

./: LICENSE  Project.toml  README.md  full_weekly_data.csv  main.py  pyproject.toml
data/: forecast_min_max.csv  forecast_min_max_with_predictions.csv  weekly_min_max.csv
data/The Water Sector Meets Mathematics_ V-KEMS Virtual Study Group-20260323T171309Z-3-001/Challenge 1/: VKEMS challenge 1 data.xlsx
notebooks/: eda.ipynb  lstm.ipynb  lstm.py  stat_eda.ipynb  weather_eda.ipynb  weather_explore.py  weather_forcast.py  weather_pulling.ipynb
notebooks/weekly_weather_data/: weather_data_weekly_Zone AA.csv  weather_data_weekly_Zone AB.csv  weather_data_weekly_Zone AC.csv  weather_data_weekly_Zone AD.csv  weather_data_weekly_Zone AE.csv  weather_data_weekly_Zone AF.csv  weather_data_weekly_Zone AG.csv  weather_data_weekly_Zone AH.csv  weather_data_weekly_Zone AI.csv  weather_data_weekly_Zone AJ.csv  weather_data_weekly_Zone AK.csv  weather_data_weekly_Zone AL.csv  weather_data_weekly_Zone AM.csv  weather_data_weekly_Zone AN.csv  weather_data_weekly_Zone AO.csv  weather_data_weekly_Zone AP.csv  weather_data_weekly_Zone AQ.csv  weather_data_weekly_Zone AR.csv  weather_data_weekly_Zone AS.csv  weather_data_weekly_Zone AT.csv  weather_data_weekly_Zone AU.csv  weather_data_weekly_Zone AV.csv  weather_data_weekly_Zone AW.csv  weather_data_weekly_Zone AX.csv  weather_data_weekly_Zone AY.csv  weather_data_weekly_Zone AZ.csv  weather_data_weekly_Zone BA.csv  weather_data_weekly_Zone BB.csv  weather_data_weekly_Zone BC.csv
src/: Project.toml  vkems_water.jl  weather_pull.py
