[project]
name = "vkems-water"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyproj>=3.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
